# VideoSplitter

./: CMakeLists.txt  CMakePresets.json  ComfyBgRemover.cpp  ComfyBgRemover.h  FrameExtractor.cpp  FrameExtractor.h  Label.cpp  Label.h  RangeSlider.cpp  RangeSlider.h  VLCQTPlayer.pro  VideoExporter.cpp  VideoExporter.h  VideoWidget.cpp  VideoWidget.h  main.cpp  splitview.cpp  splitview.h  splitview.ui
.claude/: settings.local.json
.qtcreator/: VLCQTPlayer.pro.user.a6fc7bc
